@@ -13,15 +13,27 @@ class ConfirmEmail extends Notification implements ShouldQueue
     use Queueable;
 
     /**
+     * @var bool
+     */
+    public $force;
+
+    public function __construct($force = false)
+    {
+        $this->force = $force;
+    }
+
+    /**
      * Get the notification's delivery channels.
      *
      * @return array
      */
     public function via()
     {
-        $first = Account::count() == 1;
-        if (! config('monica.signup_double_optin') || $first) {
-            return [];
+        if (! $this->force) {
+            $first = Account::count() == 1;
+            if (! config('monica.signup_double_optin') || $first) {
+                return [];
+            }
         }
 
         return ['mail'];
